--- a/acp.html
+++ b/acp.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <title>Document</title>
+    <style>
+      body {
+        background-color: rgba(255, 0, 255, 0.152);
+      }
+      h1 {
+        color: rgb(122, 9, 31);
+        font-weight: bold;
+        font-size: 40px;
+        font-family: monospace;
+      }
+    </style>
   </head>
   <body>
     <div id="background">
